...
            "state" : "translated",
            "value" : "Klima"
          }
        }
      }
    },
    "Close" : {
      "comment" : "A button that dismisses the current view, likely to return to a list of countries.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "Sichern"
          }
        }
      }
    },
    "Search countries" : {
      "comment" : "A prompt for a searchable toolbar in the \"All Countries\" tab.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "Sehr sicher"
          }
        }
      }
    },
    "Visited" : {
      "comment" : "Actions that can be performed on a country in the \"All countries\" list.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "Weltkarte"
          }
        }
      }
    },
    "Your Countries" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Deine Länder"
          }
...
